--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -14,7 +14,7 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:minHeight="200dp"
+        android:minHeight="@dimen/main_menu_min_height"
         android:orientation="horizontal"
         android:weightSum="5">
 
@@ -23,7 +23,7 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_weight="3"
-            android:paddingTop="10dp"
+            android:paddingTop="@dimen/image_vertical_margin"
             android:contentDescription="@string/image_movie_poster" />
 
         <LinearLayout
